fixed the use case test with all of them passing